# forgectl

./: .gitignore  .goreleaser.yaml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  forgectl-plan-queue.json  forgectl-state.json  forgectl-state.json.bak  plan-queue.json
.forgectl/: config
.forgectl/state/: forgectl-state.json
.workspace/forgectl/: README.md  main.go
.workspace/implementation_planning/: SCAFFOLD_CHANGES.md
.workspace/specs/: SPEC_GENERATION_SKILL.md
commands/meta/: gen-prompt-from-discussion.md  prompt-structure.md  start-discussion-to-gen-prompt.md
commands/q/: n_number_of_problems.md
commands/review/: review_with_fresh_eyes.md
docs/: activity-logging.md  auto-committing.md  configurations.md  default-config.toml  json-file-catalog.md  plan_for_forgectl.md  sub-agent-spawn-points.md
docs/commands/: forgectl-validate.md
docs/diagrams/: 00-full-lifecycle.txt  01-specifying-phase.txt  02-planning-phase.txt  03-implementing-phase.txt  04-cli-commands.txt  05-skills-and-roles.txt  06-state-machine-complete.txt  07-evaluation-loop.txt  08-data-flow.txt
docs/examples/: example_of_working_and_planning_in_specs.txt
docs/schemas/: forge-state.md  plan-json.md  plan-queue.md  spec-queue.md
forgectl/: .gitignore  CLAUDE.md  OPERATING_MANUAL.md  PLAN_FORMAT.md  README.md  go.mod
forgectl/cmd/: addcommit.go  addqueueitem.go  advance.go  commands_test.go  eval.go  init.go  isdone.go  reconcilecommit.go  (+5 more)
reverse_engineer/: pyproject.toml
reverse_engineer/src/reverse_engineer/: __init__.py  cli.py
reverse_engineer/tests/: test_cli.py
(+158 files in other folders)
